<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.newentry.NewFoodEntryFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/attachedImagesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_attached_image"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/attachImageAction"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="24dp"
            android:background="@drawable/upload_photo_button_background"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iconCameraImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_camera" />

            <TextView
                android:id="@+id/attachImageTextView"
                style="@style/TextBody3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attach_image" />

        </LinearLayout>


        <TextView
            android:id="@+id/dateAndTimeTextView"
            style="@style/TextBody2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/date_and_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attachImageAction" />

        <TextView
            android:id="@+id/dateInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/default_input_background"
            android:padding="16dp"
            app:drawableEndCompat="@drawable/calendar"
            app:layout_constraintEnd_toStartOf="@+id/timeOfDayInput"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/dateAndTimeTextView"
            app:layout_constraintTop_toBottomOf="@+id/dateAndTimeTextView" />

        <TextView
            android:id="@+id/dateTimeRequiredErroTextView"
            style="@style/TextBody2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/moment_of_the_day_is_required"
            android:textColor="@color/danger_red_color"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/dateInput"
            app:layout_constraintTop_toBottomOf="@+id/dateInput"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/timeOfDayInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/default_input_background"
            android:padding="16dp"
            app:drawableEndCompat="@drawable/time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dateInput"
            app:layout_constraintTop_toTopOf="@+id/dateInput" />

        <TextView
            android:id="@+id/igredientsTextView"
            style="@style/TextBody2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ingredients"
            app:layout_constraintStart_toStartOf="@+id/dateAndTimeTextView"
            app:layout_constraintTop_toBottomOf="@+id/dateTimeRequiredErroTextView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ingredientsTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="top"
            app:boxBackgroundColor="?attr/inputColor"
            app:boxCornerRadiusBottomEnd="14dp"
            app:boxCornerRadiusBottomStart="14dp"
            app:errorTextAppearance="@style/TextBody2"
            app:boxCornerRadiusTopEnd="14dp"
            app:boxCornerRadiusTopStart="14dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorTextColor="@color/danger_red_color"
            app:layout_constraintEnd_toEndOf="@+id/timeOfDayInput"
            app:layout_constraintStart_toStartOf="@+id/igredientsTextView"
            app:layout_constraintTop_toBottomOf="@+id/igredientsTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ingredientsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:gravity="top"
                android:lines="4"
                android:padding="16dp"
                android:scrollbars="vertical" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/symptomsTextView"
            style="@style/TextBody2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/symptoms"
            app:layout_constraintStart_toStartOf="@+id/igredientsTextView"
            app:layout_constraintTop_toBottomOf="@+id/ingredientsTextInputLayout" />

        <EditText
            android:id="@+id/symptomsEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/default_input_background"
            android:fontFamily="@font/poppins"
            android:gravity="top"
            android:lines="4"
            android:padding="16dp"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="@+id/timeOfDayInput"
            app:layout_constraintStart_toStartOf="@+id/igredientsTextView"
            app:layout_constraintTop_toBottomOf="@+id/symptomsTextView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="8dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/symptomsEditText"
            tools:layout_editor_absoluteX="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
