<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FoodEntriesListFragment">

    <fragment
        android:id="@+id/FoodEntriesListFragment"
        android:name="br.dev.tiagosutter.foodtracker.ui.entrieslist.FoodEntriesFragment"
        android:label="@string/list_fragment_label"
        tools:layout="@layout/fragment_food_entries">

        <action
            android:id="@+id/action_FoodEntriesListFragment_to_NewFoodEntryFragment"
            app:destination="@id/NewFoodEntryFragment" />
        <action
            android:id="@+id/action_FoodEntriesListFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/NewFoodEntryFragment"
        android:name="br.dev.tiagosutter.foodtracker.ui.newentry.NewFoodEntryFragment"
        android:label="@string/new_entry_fragment_label"
        tools:layout="@layout/fragment_new_food_entry">

        <action
            android:id="@+id/action_NewFoodEntryFragment_to_FoodEntriesListFragment"
            app:destination="@id/FoodEntriesListFragment" />
        <argument
            android:name="foodEntry"
            app:argType="br.dev.tiagosutter.foodtracker.entities.FoodEntry"
            app:nullable="true" />
        <argument
            android:name="initialDate"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="br.dev.tiagosutter.foodtracker.ui.settings.SettingsFragment"
        android:label="@string/settings" />
</navigation>