...
    <string name="date_and_time">Date and time</string>
    <string name="ingredients">Ingredients</string>
    <string name="symptoms">Symptoms</string>
    <string name="save">Save</string>
    <string name="add_new_food_entry">Add new food entry</string>
    <string name="moment_of_the_day_is_required">Moment of the day is required</string>
    <string name="ingredients_required">You must specify ingredients</string>
    <string name="all_fine">Normal</string>
    <string name="symptomatic">Symptomatic</string>
    <string name="food_diary">Food Diary</string>
    <string name="no_records_found">No entries yet</string>
    <string name="attach_image">Attach image</string>
    <string name="add_more_images">Add more</string>
...
